Fixes alignment of autocomplete... and bug in client side validation.

--- a/org/Hibachi/HibachiAssets/css/global.less
+++ b/org/Hibachi/HibachiAssets/css/global.less
@@ -183,6 +183,7 @@ h4 {
 .autocomplete-options {
 	position:absolute;
 	top:28px;
+	left:-130px;
 	margin:3px 0px 0px 0px;
 	width:350px;
 	max-height:300px;
